Add PULL_REQUEST_TEMPLATE.md template

--- a/copier-python-template/.github/PULL_REQUEST_TEMPLATE.md.jinja
+++ b/copier-python-template/.github/PULL_REQUEST_TEMPLATE.md.jinja
@@ -24,8 +24,6 @@ Related to #TBD
 - [ ] I'm familiar with: {{ repository_provider }}/{{ repository_namespace }}/{{ package_name_py }}/blob/main/docs/CONTRIBUTING.md
 - [ ] I'm aware of the Code of Conduct: {{ repository_provider }}/{{ repository_namespace }}/{{ package_name_py }}/blob/main/docs/CODE_OF_CONDUCT.md
 - [ ] If making code changes:
-  - [ ] I've run `poetry run doit` and the `pre-commit` checks locally
+  - [ ] I've run `poetry` and the `pre-commit` checks locally
   - [ ] I've added one or more tests for every changes
   - [ ] I've updated any relevant documentation
-
-<!-- 'calcipy:skip_tags' -->
