Add from branchvincent/python-template

--- a/copier-python-template/{{ package_name_py }}/__init__.py.jinja
+++ b/copier-python-template/{{ package_name_py }}/__init__.py.jinja
@@ -4,6 +4,10 @@ import warnings
 
 from loguru import logger
 
+from importlib.metadata import version
+
+__version__ = version(__package__)
+
 __version__ = '0.0.1'
 __pkg_name__ = '{{ package_name_py }}'
 
